# VC.SA.Plugin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  WMHHZ.sln  常用2500汉字.txt  常用3000汉字.txt  常用汉字.txt
LCGXTBuilder/: Builder.sh  LCGXT.cpp  LCGXT.h  LCGXTBuilder.vcxproj  LCGXTBuilder.vcxproj.filters  main.cpp
SAGXTBuilder/: Builder.sh  CMakeLists.txt  SAGXT.cpp  SAGXT.h  SAGXTBuilder.vcxproj  SAGXTBuilder.vcxproj.filters  main.cpp
VCGXTBuilder/: Builder.sh  CMakeLists.txt  VCGXT.cpp  VCGXT.h  VCGXTBuilder.vcxproj  VCGXTBuilder.vcxproj.filters  main.cpp
depends/lpng1622/lib/: libpng16.lib  zlib.lib
ginput_patch/: CGInputPatch.cpp  CGInputPatch.h  CMakeLists.txt  reverse_ginput.txt
include/freetype-2.6.5/include/: ft2build.h
include/freetype-2.6.5/include/freetype/myconfig/: ftheader.h
include/func_wrapper/: func_wrapper.hpp
include/hooking/: Hooking.Patterns.cpp  Hooking.Patterns.h
include/injector/: calling.hpp  injector.hpp
include/selector/: AddressSelector.cpp  AddressSelector.h
include/utf8cpp/utf8/: core.h
wm_ivchs/: wm_ivchs.vcxproj
wm_ivchs/xliveless/: xlive.lib  xliveless.h
wm_lcchs/: CCharTable.cpp  CCharTable.h  CFont.cpp  CFont.h  CSprite2d.cpp  CSprite2d.h  CTxdStore.cpp  CTxdStore.h  ThePlugin.cpp  ThePlugin.h  WMLC.cpp  WMLC.h  dllmain.cpp  game.h  rwFunc.cpp  rwFunc.h  wm_lcchs.vcxproj  wm_lcchs.vcxproj.filters
wm_sachs/: CCharTable.cpp  CCharTable.h  CFont.cpp  CFont.h  CFontPatch.cpp  CFontPatch.h  CGInputPatchSA.cpp  CGInputPatchSA.h  CMakeLists.txt  CPlugin.cpp  CPlugin.h  CScriptTextDrawer.cpp  CScriptTextDrawer.h  CSprite.cpp  CSprite.h  CSprite2d.cpp  CSprite2d.h  CTxdStore.cpp  CTxdStore.h  FontPatch.cpp  FontPatch.h  Main.cpp  dllmain.cpp  game.h  reverse_ginput.txt  rwFunc.cpp  rwFunc.h  wm_sachs.vcxproj  wm_sachs.vcxproj.filters
wm_sachs/rw/: RenderWare.h
wm_vcchs/: CCharTable.cpp  CCharTable.h  CFont.cpp  CFont.h  CFontPatch.cpp  CFontPatch.h  CFreeType.cpp  CFreeType.h  CMakeLists.txt  CPlugin.cpp  CSprite2d.cpp  CSprite2d.h  CTimer.cpp  CTimer.h  CTxdStore.cpp  CTxdStore.h  FontPatch.cpp  FontPatch.h  Main.cpp  ThePlugin.cpp  ThePlugin.h  WMVC.cpp  WMVC.h  dllmain.cpp  game.h  reverse_ginput.txt  rwFunc.cpp  rwFunc.h  stdinc.h  wm_vcchs.vcxproj  wm_vcchs.vcxproj.filters
